<resources>
    <string name="app_name">Arcanum</string>
    <string name="none"></string>
    <string name="auth_title_phone">Your phone</string>
    <string name="auth_title_code">Your code</string>
    <string name="auth_title_name">Your name</string>
    <string name="auth_hint_phone">Please confirm your country code and enter your phone number.</string>
    <string name="auth_hint_code">We\'ve sent an SMS with an activation code to your phone %s.</string>
    <string name="auth_hint_call">We will call you in %s.</string>
    <string name="auth_hint_name">Enter your name and add a profile picture.</string>
    <string name="auth_btn_next">Next</string>
    <string name="auth_lbl_code">Code</string>
    <string name="page_title_dialogs">Arcanum</string>
    <string name="page_title_contacts">Select Contact</string>
    <string name="page_title_settings">Settings</string>
    <string name="page_title_share_location">Share Location</string>
	<string name="page_title_location">Location</string>
    <string name="page_title_group">New Group</string>
	<string name="page_title_user_info">Contact Info</string>
	<string name="page_title_chat_info">Group Info</string>
	<string name="page_title_forward">Forward Message</string>
	<string name="page_title_share">Share Contact</string>
	<string name="page_title_media">Media in Chat</string>
	<string name="page_title_wallpaper">Chat Background</string>
    <string name="chat_btn_settings">Settings</string>
    <string name="btn_compose_contact">Write to contact</string>
    <string name="btn_compose_group">New group</string>
    <string name="settings_header_phone">YOUR PHONE NUMBER</string>
    <string name="settings_header_options">SETTINGS</string>
    <string name="settings_header_support">SUPPORT</string>
    <string name="settings_header_notify_message">MESSAGE NOTIFICATIONS</string>
    <string name="settings_header_notify_group">GROUP NOTIFICATIONS</string>
    <string name="settings_header_notify_inapp">IN-APP NOTIFICATIONS</string>
    <string name="settings_header_notify_reset">RESET</string>
    <string name="settings_opt_save_media">Save Incoming Photos</string>
    <string name="settings_opt_notify">Notifications and Sounds</string>
    <string name="settings_opt_blocked">Blocked Contacts</string>
    <string name="settings_opt_wallpaper">Chat Background</string>
    <string name="settings_opt_question">Ask a Question</string>
    <string name="settings_opt_msg_alert">Alert</string>
    <string name="settings_opt_msg_prev">Message Preview</string>
    <string name="settings_opt_grp_alert">Alert</string>
    <string name="settings_opt_grp_prev">Message Preview</string>
    <string name="settings_opt_inapp_sound">In-App Sounds</string>
    <string name="settings_opt_inapp_vibrate">In-App Vibrate</string>
    <string name="settings_opt_inapp_prev">In-App Preview</string>
    <string name="settings_opt_reset">Reset All Notifications</string>
    <string name="settings_hint_reset">Undo all custom notification settings for all your contacts and groups</string>
	<string name="settings_btn_logout">Log Out</string>
	<string name="media_photo">VIEW PHOTO</string>
	<string name="media_location">VIEW LOCATION</string>
	<string name="media_video">PLAY VIDEO</string>
	<string name="media_download">DOWNLOAD %.2fMB</string>
	<string name="media_unsupported">UNSUPPORTED</string>
	<string name="info_header_phone">PHONE</string>
	<string name="info_header_media">SHARED MEDIA</string>
	<string name="info_header_members">%d MEMBERS</string>
	<string name="info_header_member">%d MEMBER</string>
	<string name="info_opt_media">Media in chat</string>
	<string name="info_opt_forward">Forward</string>
	<string name="info_opt_notify">Notifications</string>
	<string name="info_opt_sound">Sound</string>
	<string name="info_opt_share">Share My Contact Info</string>
	<string name="notify_format"><Data><![CDATA[<font color=\"#e5624d\">%s</font>]]></Data></string>
	<string name="header_selected">Selected: %d</string>
	<string name="btn_info_chat_delete">Delete and leave group</string>
	<string name="contact_view">View in Contacts</string>
	<string name="contact_share">Share Contact</string>
	<string name="contact_block">Block Contact</string>
	<string name="group_info_create"><Data><![CDATA[<b>%s</b> created group]]></Data></string>
	<string name="group_info_title"><Data><![CDATA[<b>%1$s</b> changed group title to<br/>\"%2$s\"]]></Data></string>
	<string name="group_info_photo_edit"><Data><![CDATA[<b>%s</b> changed group photo]]></Data></string>
	<string name="group_info_photo_delete"><Data><![CDATA[<b>%s</b> remove group photo]]></Data></string>
	<string name="group_info_add"><Data><![CDATA[<b>%1$s</b> invited <b>%2$s</b> to group]]></Data></string>
	<string name="group_info_del"><Data><![CDATA[<b>%1$s</b> kicked <b>%2$s</b> from group]]></Data></string>
	<string name="group_info_suicide"><Data><![CDATA[<b>%s</b> left group]]></Data></string>
	<string name="pref_settings_title">Settings</string>
	<string name="pref_settings_summary">Profile name, picture, notifications, etc.</string>
	<string name="btn_done">DONE</string>
	<string name="btn_cancel">CANCEL</string>
	<string name="btn_set">SET</string>
	<string name="btn_add_member">Add member</string>
    <string name="sound_def">Default</string>
    <string name="invite_text">Invite Friends</string>
    <string name="hint_send">Send</string>
	<string name="hint_media">Media</string>
	<string name="hint_group">Send message to...</string>
	<string name="hint_group_title">Group title</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_not_group_admin">You are not group admin</string>
    <string name="msg_copy">Copied to clipboard</string>
    <string name="msg_forwarded"><Data><![CDATA[<small><font color="#006fc8">Forwarded Message<br/>From <b>%s</b></font></small><br/>]]></Data></string>
	<string name="attach_photo">Take photo</string>
	<string name="attach_gallery">Gallery</string>
	<string name="attach_video">Video</string>
	<string name="attach_location">Location</string>
	<string name="phone_mobile">MOBILE</string>
	<string name="status_online_user">online</string>
	<string name="status_online_chat"><Data><![CDATA[<font color="#9a9a9a">%1$d members,</font> %2$d online]]></Data></string>
	<string name="status_offline_user">offline</string>
	<string name="status_offline1">last seen just now</string>
	<string name="status_offline2">%d minutes ago</string>
	<string name="status_offline3">1 hour ago</string>
	<string name="status_offline4">%d hours ago</string>
	<string name="status_typing_user">typing...</string>
	<string name="status_typing_chat1">%s is typing...</string>
	<string name="status_typing_chat2">%s are typing...</string>
	<string name="status_typing_chatN">%d members are typing...</string>
	<string name="info_yesterday">yesterday</string>
	<string name="info_format_media"><Data><![CDATA[<font color="#006fc8">%s</font>]]></Data></string>
	<string name="info_format_online"><Data><![CDATA[<font color="#006fc8">%s</font>]]></Data></string>
	<string name="info_format_offline"><Data><![CDATA[<font color="#9a9a9a">%s</font>]]></Data></string>
	<string name="info_you">You</string>
	<string name="info_photo">Photo</string>
	<string name="info_video">Video</string>
	<string name="info_location">Location</string>
	<string name="info_contact">Contact</string>
	<string name="info_document">Document</string>
	<string name="info_forwarded">Forwarded</string>
	<string name="msg_opt_title">Message</string>
	<string name="btn_send_location">Send Location</string>
	<string name="btn_loc_normal">Normal</string>
	<string name="btn_loc_satellite">Satellite</string>
	<string name="btn_loc_hybrid">Hybrid</string>
	<string name="dialog_btn_cancel">Cancel</string>
	<string name="dialog_btn_delete">Delete</string>
	<string name="dialog_btn_discard">Discard</string>
	<string name="dialog_btn_reset">Reset</string>
	<string name="dialog_btn_send">Send</string>
	<string name="dialog_btn_unblock">Unblock</string>
	<string name="dialog_btn_kick">Kick</string>
	<string name="dialog_title_dialog">Dialog</string>
	<string name="dialog_title_group">Group</string>
	<string name="dialog_title_kick">Kick</string>
    <string name="dialog_title_reset">Reset</string>
    <string name="dialog_title_unblock">Unblock</string>
    <string name="dialog_title_media">Media</string>
    <string name="dialog_unblock">Unblock contact?</string>
    <string name="dialog_reset">Undo all custom notification settings for all your contacts and groups?</string>
	<string name="dialog_delete_dialog">Delete dialog?</string>
	<string name="dialog_delete_group">Delete and leave group?</string>
	<string name="dialog_kick">Kick from group?</string>
	<string name="dialog_send_media">Attach shared media?</string>
	<string name="choose_share_media">Share media</string>
	<string name="empty_message">No messages yet…</string>
	<string name="empty_question">Got a question about Telegram?</string>
	<string name="attach_video_record">Record</string>
	<string name="attach_video_choose">Gallery</string>
	<string name="photo_title">%1$d of %2$d</string>
	<string name="wp_choose_image">Image</string>
	<string name="wp_choose_color">Color</string>
	<string name="location_dist">%d m away</string>
	<string name="start">Start Messaging</string>
    <string name="intro_title0">Telegram</string>
    <string name="intro_title1">Fast</string>
    <string name="intro_title2">Free</string>
    <string name="intro_title3">Powerful</string>
    <string name="intro_title4">Secure</string>
    <string name="intro_title5">Cloud-Based</string>
    <string name="intro_text0">Welcome to <![CDATA[<b>Telegram</b>]]> —<![CDATA[<br/>]]>the world\'s fastest messaging app.<![CDATA[<br/>]]>It is free and secure.</string>
    <string name="intro_text1"><![CDATA[<b>Telegram</b>]]> delivers messages faster than any other application.</string>
    <string name="intro_text2"><![CDATA[<b>Telegram</b>]]> is free forever. No ads. No subscription fees.</string>
    <string name="intro_text3"><![CDATA[<b>Telegram</b>]]> has no limits on the size of your media and chats.</string>
    <string name="intro_text4"><![CDATA[<b>Telegram</b>]]> keeps your messages safe from hacker attacks.</string>
    <string name="intro_text5"><![CDATA[<b>Telegram</b>]]> lets you access your messages from multiple devices.</string>
	<string-array name="msg_opt_media">
		<item>Forward</item>		
		<item>Delete</item>
	</string-array>
	<string-array name="msg_opt_text">
		<item>Forward</item>
		<item>Copy</item>
		<item>Delete</item>
	</string-array>
    <string name="test_msg">Hello World!</string>
    <string name="test_name">Timur Gagiev</string>
</resources>