<?xml version="1.0" encoding="utf-8"?>
<com.xproger.arcanum.PageSettings xmlns:android="http://schemas.android.com/apk/res/android"
	android:scrollbarStyle="outsideOverlay"
	android:fadingEdge="none"    
	android:paddingTop="56dp"
	android:clipToPadding="false"	   
	android:fastScrollEnabled="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	    
	<LinearLayout 
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp" 
		android:layout_marginTop="8dp"
		android:layout_gravity="center_horizontal"		
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <include layout="@layout/item_info" />
	
		<TextView
		    style="@style/settingsHeader"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"		    
		    android:text="@string/settings_header_phone" />
	
		<TextView
		    android:id="@+id/text_phone"
		    android:layout_width="wrap_content"
		    android:layout_height="48dp"
		    android:paddingLeft="8dp"
		    android:gravity="left|center"	
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:singleLine="true" />
		
		<TextView
		    style="@style/settingsHeader"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:layout_marginTop="8dp"		    
		    android:text="@string/settings_header_options" />

		<CheckBox
		    android:id="@+id/btn_opt_save_media"
		    android:layout_width="match_parent"
		    android:layout_height="48dp"
		    android:drawableBottom="@drawable/divider"
		    android:text="@string/settings_opt_save_media" />			
		
		<Button
		    android:id="@+id/btn_opt_notify"
			style="@style/buttonOption"
			android:layout_width="match_parent"			
		    android:layout_height="48dp"
			android:drawableBottom="@drawable/divider"					    
		    android:text="@string/settings_opt_notify" />
		
		<Button
		    android:id="@+id/btn_opt_blocked"
		    style="@style/buttonOption"
		    android:layout_width="match_parent"
		    android:layout_height="48dp"
		    android:drawableBottom="@drawable/divider"		    
		    android:text="@string/settings_opt_blocked" />
		
		<Button
		    android:id="@+id/btn_opt_wallpaper"
		    style="@style/buttonOption"
		    android:onClick="onMenuClick"		    
		    android:layout_width="match_parent"
		    android:layout_height="48dp"	    
		    android:text="@string/settings_opt_wallpaper" />	
		    
		<TextView
		    style="@style/settingsHeader"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"
		    android:text="@string/settings_header_support" />
		
		<Button
		    android:id="@+id/btn_opt_question"
		    style="@style/buttonOption"
		    android:layout_width="match_parent"
		    android:layout_height="48dp"	    
		    android:text="@string/settings_opt_question" />					
				
		<Button
		    android:id="@+id/btn_logout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"
		    android:background="@drawable/btn_gray"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/settings_btn_logout"
			android:layout_marginBottom="16dp" />

	</LinearLayout>
</com.xproger.arcanum.PageSettings>
	